--- a/index.html
+++ b/index.html
@@ -1464,12 +1464,16 @@ Talvez eu ainda possa [[fazer algo|procurar por informação alt]]
 Você sai de casa e vai em direção a empresa. Passando pela rua você percebe o quão vazia ela está,as únicas coisas se movendo são câmeras de segurança e alguns panfletos amassados sendo varridos pelo vento. Ver a cidade assim é triste e desconfortante pois mesmo ela estando vazia,você ainda tem uma sensação de estar sendo vigiado o tempo todo.
 
 Chegando a empresa você passa pelas portas e vê um salão de recepção vazio com algumas cadeiras,ainda novas e sem uso,algumas poucas câmeras e uma bancada de recepção. Ver um local como esse,feito para acomodar pessoas em espera sem ninguém te incomoda um pouco,pois onde era pra ter ao menos alguma aglomeração humana agora só existe uma pessoa,sendo o guarda mascarado no canto da sala. Indo até a mesa de recepção você nota que existe só uma máquina onde era pra ter uma pessoa lhe atendendo. Você mostra sua identificação e a máquina te aponta para um dos elevadores. O elevador sobe rapidamente e você é indicado a [[entrar em uma sala|Sala F]] pelos sinais nos monitores
-&lt;&lt;set $Saude to $Saude - 1&gt;&gt;</tw-passagedata><tw-passagedata pid="127" name="Empresa P" tags="" position="3950,1650" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+&lt;&lt;set $Saude to $Saude - 1&gt;&gt;
+&lt;&lt;audio cyber_bgm stop&gt;&gt;
+&lt;&lt;audio arch_bgm volume 0.05 play loop&gt;&gt;</tw-passagedata><tw-passagedata pid="127" name="Empresa P" tags="" position="3950,1650" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 &lt;center&gt;&lt;img id=&quot;imgs&quot; src=&quot;images/rua.png&quot;&gt;&lt;/center&gt;
 Você sai de casa e vai em direção a empresa. Passando pela rua você percebe o quão vazia ela está,as únicas coisas se movendo são câmeras de segurança e alguns panfletos amassados sendo varridos pelo vento. Ver a cidade assim é triste e desconfortante pois mesmo ela estando vazia,você ainda tem uma sensação de estar sendo vigiado o tempo todo.
 
 Chegando a empresa você passa pelas portas e vê um salão de recepção vazio com algumas cadeiras,ainda novas e sem uso,algumas poucas câmeras e uma bancada de recepção. Ver um local como esse,feito para acomodar pessoas em espera sem ninguém te incomoda um pouco,pois onde era pra ter ao menos alguma aglomeração humana agora só existe uma pessoa,sendo o guarda mascarado no canto da sala. Indo até a mesa de recepção você nota que existe só uma máquina onde era pra ter uma pessoa lhe atendendo. Você mostra sua identificação e exige falar com a gerente comunitária,a máquina te aponta para um dos elevadores. O elevador sobe rapidamente e você é indicado a [[entrar em uma sala|Sala P]] pelos sinais nos monitores
-&lt;&lt;set $Saude to $Saude - 1&gt;&gt;</tw-passagedata><tw-passagedata pid="128" name="Sala P" tags="" position="3950,1800" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+&lt;&lt;set $Saude to $Saude - 1&gt;&gt;
+&lt;&lt;audio cyber_bgm stop&gt;&gt;
+&lt;&lt;audio arch_bgm volume 0.05 play loop&gt;&gt;</tw-passagedata><tw-passagedata pid="128" name="Sala P" tags="" position="3950,1800" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
 Entrando na sala você se depara com uma janela enorme que cobre todo o fundo da sala,entre você e o vidro tem uma mesa e uma cadeira alta com as costas viradas pra você. A cadeira roda e você vê uma mulher sentada com uma xícara de café nas mãos,ela coloca a xícara na mesa,coloca sua máscara e fala
 
 &quot;Então você decidiu aparecer,é muito bom ter sua presença aqui,Vanno&quot;
