--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@ Você pode ver a preocupação nas mensagens de josé, talvez você possa usar i
 [[&quot;Sua... mãe?&quot;|A verdade 2]]
 
 [[&quot;Você já não passou dessa idade não?&quot;|A verdade 2.5]]</tw-passagedata><tw-passagedata pid="43" name="Atender telefone" tags="" position="1225,950" size="100,100">&lt;div id=&quot;volume&quot;&gt;Volume:&lt;&lt;volume&gt;&gt;&lt;/div&gt;
+&lt;center&gt;&lt;img id=&quot;imgs&quot; src=&quot;images/boss.png&quot;&gt;&lt;/center&gt;
 &lt;&lt;if $MancheteP eq 1&gt;&gt;&quot;VANNO, TODOS OS DIRETORES DA &quot;ZER0 HORA&quot; NÃO PARAM DE RECEBER LIGAÇÕES SOBRE A MATÉRIA PUBLICADA. VOCÊ ME DESOBEDECEU E SUA ATITUTE TERÁ CONSEQUÊNCIAS!&quot;
 
 Você até tenta se explicar para amenizar a situação, mas sabe que não vai adiantar de muito...
